src/reflex/check_err.txt
    Checking reflex v0.1.0 (/Users/zishanmalik/voltaire/src/reflex)
warning: unused import: `std::collections::HashMap`
  --> src/ingest/kraken.rs:12:5
   |
12 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `FirewallError`
  --> src/governor/ooda_loop.rs:63:64
   |
63 | use crate::auditor::firewall::{Firewall, LlmInferenceResponse, FirewallError};
   |                                                                ^^^^^^^^^^^^^

warning: unused imports: `ControlMessage`, `MsgFlags`, `UnixAddr`, `recvmsg`, and `sendmsg`
 --> src/governor/handoff.rs:7:24
  |
7 | use nix::sys::socket::{sendmsg, recvmsg, ControlMessage, MsgFlags, UnixAddr};
  |                        ^^^^^^^  ^^^^^^^  ^^^^^^^^^^^^^^  ^^^^^^^^  ^^^^^^^^

warning: unused import: `info`
 --> src/governor/rebalancer.rs:2:15
  |
2 | use tracing::{info, warn, error};
  |               ^^^^

warning: unused import: `super::*`
  --> src/auditor/firewall.rs:88:9
   |
88 |     use super::*;
   |         ^^^^^^^^

warning: unused import: `Heartbeat`
  --> src/server.rs:11:51
   |
11 |     DemoteRequest, RatchetRequest, ConfigPayload, Heartbeat,
   |                                                   ^^^^^^^^^

warning: unused import: `Duration`
 --> src/sequencer/sync_gate.rs:1:17
  |
1 | use std::time::{Duration, Instant};
  |                 ^^^^^^^^

warning: unused import: `tracing::warn`
 --> src/sequencer/sync_gate.rs:2:5
  |
2 | use tracing::warn;
  |     ^^^^^^^^^^^^^

warning: unused imports: `info` and `warn`
 --> src/sequencer/shadow_gate.rs:4:15
  |
4 | use tracing::{info, warn};
  |               ^^^^  ^^^^

error[E0277]: the trait bound `std::time::Instant: serde::Serialize` is not satisfied
    --> src/sequencer/shadow_gate.rs:7:24
     |
   7 | #[derive(Debug, Clone, Serialize, Deserialize)]
     |                        ^^^^^^^^^ the trait `Serialize` is not implemented for `std::time::Instant`
...
  14 |     pub created_at: Instant,
     |     --- required by a bound introduced by this call
     |
     = note: for local types consider adding `#[derive(serde::Serialize)]` to your `std::time::Instant` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Serialize`:
               &'a T
               &'a mut T
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
               (T0, T1, T2, T3, T4)
             and 160 others
note: required by a bound in `feynman::_::_serde::ser::SerializeStruct::serialize_field`
    --> /Users/zishanmalik/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/ser/mod.rs:1917:21
     |
1915 |     fn serialize_field<T>(&mut self, key: &'static str, value: &T) -> Result<(), Self::Error>
     |        --------------- required by a bound in this associated function
1916 |     where
1917 |         T: ?Sized + Serialize;
     |                     ^^^^^^^^^ required by this bound in `SerializeStruct::serialize_field`
     = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::time::Instant: serde::Deserialize<'de>` is not satisfied
    --> src/sequencer/shadow_gate.rs:14:21
     |
  14 |     pub created_at: Instant,
     |                     ^^^^^^^ the trait `Deserialize<'_>` is not implemented for `std::time::Instant`
     |
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `std::time::Instant` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               &'a [u8]
               &'a std::path::Path
               &'a str
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
             and 182 others
note: required by a bound in `next_element`
    --> /Users/zishanmalik/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/de/mod.rs:1771:12
     |
1769 |     fn next_element<T>(&mut self) -> Result<Option<T>, Self::Error>
     |        ------------ required by a bound in this associated function
1770 |     where
1771 |         T: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `SeqAccess::next_element`

error[E0277]: the trait bound `std::time::Instant: serde::Deserialize<'de>` is not satisfied
    --> src/sequencer/shadow_gate.rs:14:21
     |
  14 |     pub created_at: Instant,
     |                     ^^^^^^^ the trait `Deserialize<'_>` is not implemented for `std::time::Instant`
     |
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `std::time::Instant` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               &'a [u8]
               &'a std::path::Path
               &'a str
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
             and 182 others
note: required by a bound in `next_value`
    --> /Users/zishanmalik/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/de/mod.rs:1916:12
     |
1914 |     fn next_value<V>(&mut self) -> Result<V, Self::Error>
     |        ---------- required by a bound in this associated function
1915 |     where
1916 |         V: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `MapAccess::next_value`

error[E0277]: the trait bound `std::time::Instant: serde::Deserialize<'de>` is not satisfied
  --> src/sequencer/shadow_gate.rs:7:35
   |
 7 | #[derive(Debug, Clone, Serialize, Deserialize)]
   |                                   ^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `std::time::Instant`
   |
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `std::time::Instant` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Deserialize<'de>`:
             &'a [u8]
             &'a std::path::Path
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and 182 others
note: required by a bound in `feynman::_::_serde::__private228::de::missing_field`
  --> /Users/zishanmalik/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde-1.0.228/src/private/de.rs:26:8
   |
24 | pub fn missing_field<'de, V, E>(field: &'static str) -> Result<V, E>
   |        ------------- required by a bound in this function
25 | where
26 |     V: Deserialize<'de>,
   |        ^^^^^^^^^^^^^^^^ required by this bound in `missing_field`
   = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `ts`
  --> src/historian/biopsy.rs:33:17
   |
33 |             let ts = packet.timestamp; // Instant is hard to serialize to absolute time without anchor.
   |                 ^^ help: if this is intentional, prefix it with an underscore: `_ts`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0277`.
warning: `reflex` (lib) generated 10 warnings
error: could not compile `reflex` (lib) due to 4 previous errors; 10 warnings emitted
